<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <Button
        android:id="@+id/buttonOption4"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/Buttonfour"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOption3"
        app:layout_constraintTop_toBottomOf="@+id/buttonOption2" />

    <Button
        android:id="@+id/buttonOption2"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/Buttonthree"
        style="@style/button"
        app:layout_constraintBottom_toTopOf="@+id/buttonOption4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/buttonOption1"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <Button
        android:id="@+id/buttonOption3"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/Buttonone"
        style="@style/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonOption4"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonOption1" />

    <Button
        android:id="@+id/buttonOption1"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/certa"
        style="@style/button"
        app:layout_constraintBottom_toTopOf="@+id/buttonOption3"
        app:layout_constraintEnd_toStartOf="@+id/buttonOption2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <TextView
        android:id="@+id/textView2"
        style="@style/Styleee"
        android:layout_width="488dp"
        android:layout_height="25dp"
        android:layout_marginTop="46dp"
        android:fontFamily="@font/amiri_bold"
        android:text="@string/um"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button8"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/numeracao"
        android:text="1"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>