<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="luiz.souza.omegaquiz.MainActivityFinal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/congrats"
        android:textSize="25sp"
        style="@style/Styleee"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <Button
        android:id="@+id/button_main_menu"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/menu"
        android:textSize="15sp"
        style="@style/button"
        android:layout_margin="40dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_restart"/>

    <Button
        android:id="@+id/button_restart"
        android:layout_width="@dimen/width_activitymain2"
        android:layout_height="@dimen/height_activitymain2"
        android:text="@string/restart"
        android:textSize="15sp"
        style="@style/button"
        android:layout_margin="40dp"
        app:layout_constraintStart_toEndOf="@id/button_main_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>